8258790: C2: Crash on empty macro node list